added style in css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my sinple website</title>
+    <link rel="stylesheet" href="/style.css">
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h3>my first website</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+        tempora quae commodi, quasi mollitia magni accusantium fuga eius numquam
+        ducimus, nulla, excepturi est perferendis dolorum adipisci odio
+        repudiandae a reprehenderit.
+      </p>
+    </div>
+  </body>
 </html>
