extra style added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my sinple website</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
+    <div>
+      <h3>my first website</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+        tempora quae commodi, quasi mollitia magni accusantium fuga eius numquam
+        ducimus, nulla, excepturi est perferendis dolorum adipisci odio
+        repudiandae a reprehenderit.
+      </p>
+    </div>
+    <div>
+      <h3>my first website</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+        tempora quae commodi, quasi mollitia magni accusantium fuga eius numquam
+        ducimus, nulla, excepturi est perferendis dolorum adipisci odio
+        repudiandae a reprehenderit.
+      </p>
+    </div>
+    <div>
+      <h3>my first website</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+        tempora quae commodi, quasi mollitia magni accusantium fuga eius numquam
+        ducimus, nulla, excepturi est perferendis dolorum adipisci odio
+        repudiandae a reprehenderit.
+      </p>
+    </div>
     <div>
       <h3>my first website</h3>
       <p>
